--- a/src/index.css
+++ b/src/index.css
@@ -67,4 +67,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
-
+ 
+body {
+  margin: 0;
+  font-family: Bariol, Helvetica, Arial, sans-serif;
+}
