--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,14 @@
     margin: 0px auto;
 }
 
+.opaque {
+    background-color: rgba(110, 110, 110, 0.2) !important;
+    box-shadow: 0px 10px 32px 0px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
+    /* border: 1px solid rgba(255, 255, 255, 0.1); */ 
+}
+
 
 
 /* .body {
