--- a/src/components/current-weather/daily-hourly-forecast.css
+++ b/src/components/current-weather/daily-hourly-forecast.css
@@ -44,6 +44,10 @@
   padding: 1em 0em 1em 0em;
 }
 
+.now {
+  justify-content: space-between;
+}
+
 .hourly-forecast button,
 .daily-forecast button {
   position: relative;
