--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px);
     /* border: 1px solid rgba(255, 255, 255, 0.1); */ 
+    user-select: none;
 }
 
 
