--- a/src/components/current-weather/daily-hourly-forecast.css
+++ b/src/components/current-weather/daily-hourly-forecast.css
@@ -1,3 +1,7 @@
+.weather-app {
+  user-select: none;
+}
+
 .hourly-forecast,
 .daily-forecast {
   padding: 1em 3em 1em 3em;
@@ -10,6 +14,7 @@
   border-radius: 25px;
   width: 100%;
   z-index: 3;
+  user-select: none;
 }
 
 .fiveh-forecast,
